fixed the overflow

--- a/client/src/styles/HomePage.scss
+++ b/client/src/styles/HomePage.scss
@@ -86,7 +86,7 @@ body {
   align-items: center;
   position: fixed;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(0, 0, 0, 0.1);
   // background: rgba(0, 0, 0, 0.7);
